welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:14: error: type mismatch;
 found   : Unit
 required: Boolean
		for(i <- 1 to 6)
                      ^Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
	if(vuBiscuit == false)
        ^